--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Capture your thoughts and organize your studies with this simple React Notes App." />
+    <meta property="og:title" content="React Notes App" />
+    <meta property="og:description" content="Capture your thoughts and organize your studies with this simple React Notes App." />
+    <meta property="og:image" content="./Images/Notes screenshot.png" />
+    <meta property="og:url" content="https://notes-app-rho-gold.vercel.app" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -15,6 +22,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <title>React Notes App</title>
   </head>
   <body>
     <div id="root"></div>
